# CatchRaceGo

./: README.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: GameBoard.tsx
src/components/menuBar/: MenuBar.tsx
src/interface/store/: GameStoreInterface.ts
src/routes/: Home.tsx
src/store/: ApplicationStore.ts  GameStore.ts
src/ui/: ThemeToggleButton.tsx
update/: metadata.json
